# iroh-compose-multiplatform-demo

./: .gitignore  README.md  settings.gradle.kts
.run/: composeApp.run.xml  composeAppDesktop.run.xml
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/com/example/irohcomposemultiplatform/: MainActivity.kt  Platform.android.kt  Preview.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/kotlin/com/example/irohcomposemultiplatform/: App.kt  CoreViewModel.kt  Greeting.kt  Platform.kt
composeApp/src/commonTest/kotlin/com/example/irohcomposemultiplatform/: ComposeAppCommonTest.kt
composeApp/src/desktopMain/kotlin/com/example/irohcomposemultiplatform/: Platform.jvm.kt  main.kt
composeApp/src/iosMain/kotlin/com/example/irohcomposemultiplatform/: MainViewController.kt  Platform.ios.kt
crates/iroh-compose/: Cargo.toml
crates/iroh-compose/examples/: headless.rs
crates/iroh-compose/src/: lib.rs
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
nix/: flake.nix
