[package]
name = "iroh-compose"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "irohcompose"

[[example]]
name = "headless"

[dependencies]
android_logger = "0.15.0"
anyhow = "1.0.98"
futures = "0.3.31"
iroh = "0.35.0"
log = "0.4.27"
n0-future = "0.1.3"
thiserror = "2.0.12"
tokio = "1.45.1"
uniffi = { version = "=0.28.3", features = [] }
